# Devita-AI-mission

./: Dockerfile  Jenkinsfile  README.md  containers.py  docker-compose.yaml  main.py  pyproject.toml
api/application/: service.py
api/domain/repository/: repo.py
api/infra/repository/: repo.py
api/interface/controllers/: controller.py
api/interface/controllers/dto/: dto.py
api/interface/controllers/model/: model.py
data_store/chromadb/: chroma.sqlite3
model/: llm.backup.py  llm.py  mission_generator.py  mission_generator_v2.py
